fix: replace hardcoded URLs with env vars